--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <div class="wrapper">
     <header class="d-flex flex-row ps-2">
       <div id="header-right" class="img-container mobile-hidden">
-        <img src="img/logo.svg" alt="" />
+        <img src="img/logo.svg" alt="logo" />
       </div>
 
       <div class="svg-container  mobile-visible">
-        <img class="h-100" src="img/mobile-logo.png" alt="" />
+        <img class="h-100" src="img/mobile-logo.png" alt="mobile-logo" />
       </div>
 
       <input class="form-control mx-5 my-3" type="search" placeholder="Search" aria-label="Search" />
@@ -34,10 +34,9 @@
       <div class="mobile-hidden">
         <i class="fa-solid fa-list-ul"></i>
         <i class="fa-solid fa-circle-question"></i>
-        <i class="fa-solid fa-ellipsis-vertical">
-
-        </i>
+        <i class="fa-solid fa-ellipsis-vertical"></i>
       </div>
+      <!-- campanella -->
       <div class="bell-container">
         <i id="bell" class="fa-solid fa-bell d-flex flex-row align-items-center position-relative h-100 "
           style="color: goldenrod">
@@ -75,7 +74,7 @@
 
       <div id="main-content" class="debug">
         <section id="main-nav" class="bg-primary container-fluid">
-          <div class="row">
+          <div class="row flex-lg-row">
             <div class="col-4">1</div>
             <div class="col-4">2</div>
             <div class="col-4">
@@ -83,7 +82,169 @@
 
               <!-- placeholder button -->
               <button>press me</button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                aria-controls="offcanvasRight">Toggle right offcanvas</button>
 
+              <div class="offcanvas offcanvas-end w-50" tabindex="-1" id="offcanvasRight"
+                aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                  <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body w-100">
+                  <div class="col-md-8 order-md-1  ">
+                    <h4 class="mb-3">Billing address</h4>
+                    <form class="needs-validation" novalidate="">
+                      <div class="row">
+                        <div class="col-md-6 mb-3">
+                          <label for="firstName">First name</label>
+                          <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                          <div class="invalid-feedback">
+                            Valid first name is required.
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                          <label for="lastName">Last name</label>
+                          <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                          <div class="invalid-feedback">
+                            Valid last name is required.
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="mb-3">
+                        <label for="username">Username</label>
+                        <div class="input-group">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text">@</span>
+                          </div>
+                          <input type="text" class="form-control" id="username" placeholder="Username" required="">
+                          <div class="invalid-feedback" style="width: 100%;">
+                            Your username is required.
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="mb-3">
+                        <label for="email">Email <span class="text-muted">(Optional)</span></label>
+                        <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                        <div class="invalid-feedback">
+                          Please enter a valid email address for shipping updates.
+                        </div>
+                      </div>
+
+                      <div class="mb-3">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+                        <div class="invalid-feedback">
+                          Please enter your shipping address.
+                        </div>
+                      </div>
+
+                      <div class="mb-3">
+                        <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+                        <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+                      </div>
+
+                      <div class="row">
+                        <div class="col-md-5 mb-3">
+                          <label for="country">Country</label>
+                          <select class="custom-select d-block w-100" id="country" required="">
+                            <option value="">Choose...</option>
+                            <option>United States</option>
+                          </select>
+                          <div class="invalid-feedback">
+                            Please select a valid country.
+                          </div>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                          <label for="state">State</label>
+                          <select class="custom-select d-block w-100" id="state" required="">
+                            <option value="">Choose...</option>
+                            <option>California</option>
+                          </select>
+                          <div class="invalid-feedback">
+                            Please provide a valid state.
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <label for="zip">Zip</label>
+                          <input type="text" class="form-control" id="zip" placeholder="" required="">
+                          <div class="invalid-feedback">
+                            Zip code required.
+                          </div>
+                        </div>
+                      </div>
+                      <hr class="mb-4">
+                      <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="same-address">
+                        <label class="custom-control-label" for="same-address">Shipping address is the same as my
+                          billing
+                          address</label>
+                      </div>
+                      <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="save-info">
+                        <label class="custom-control-label" for="save-info">Save this information for next time</label>
+                      </div>
+                      <hr class="mb-4">
+
+                      <h4 class="mb-3">Payment</h4>
+
+                      <div class="d-block my-3">
+                        <div class="custom-control custom-radio">
+                          <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked=""
+                            required="">
+                          <label class="custom-control-label" for="credit">Credit card</label>
+                        </div>
+                        <div class="custom-control custom-radio">
+                          <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
+                          <label class="custom-control-label" for="debit">Debit card</label>
+                        </div>
+                        <div class="custom-control custom-radio">
+                          <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
+                          <label class="custom-control-label" for="paypal">Paypal</label>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 mb-3">
+                          <label for="cc-name">Name on card</label>
+                          <input type="text" class="form-control" id="cc-name" placeholder="" required="">
+                          <small class="text-muted">Full name as displayed on card</small>
+                          <div class="invalid-feedback">
+                            Name on card is required
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                          <label for="cc-number">Credit card number</label>
+                          <input type="text" class="form-control" id="cc-number" placeholder="" required="">
+                          <div class="invalid-feedback">
+                            Credit card number is required
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-3 mb-3">
+                          <label for="cc-expiration">Expiration</label>
+                          <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
+                          <div class="invalid-feedback">
+                            Expiration date required
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <label for="cc-expiration">CVV</label>
+                          <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
+                          <div class="invalid-feedback">
+                            Security code required
+                          </div>
+                        </div>
+                      </div>
+                      <hr class="mb-4">
+                      <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
 
 
 
